scaffold/typescript-go-main/testdata/baselines/reference/submodule/compiler/exportAsNamespaceConflict.errors.txt
/a.d.ts(2,1): error TS2303: Circular definition of import alias 'N'.
/a.d.ts(3,1): error TS2303: Circular definition of import alias 'N'.


==== /a.d.ts (2 errors) ====
    declare global { namespace N {} }
    export = N;
    ~~~~~~~~~~~
!!! error TS2303: Circular definition of import alias 'N'.
    export as namespace N;
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2303: Circular definition of import alias 'N'.
    